fix: Layout overflow style for table sticky
close #28154

--- a/components/layout/style/index.less
+++ b/components/layout/style/index.less
@@ -18,10 +18,6 @@
 
   &&-has-sider {
     flex-direction: row;
-    > .@{layout-prefix-cls},
-    > .@{layout-prefix-cls}-content {
-      overflow-x: hidden;
-    }
   }
 
   &-header,
